updated html for week 02 assignment

--- a/week2-setTimeout-activity.html
+++ b/week2-setTimeout-activity.html
@@ -9,8 +9,21 @@
     <script src="scripts/week2-setTimeout-activity.js" defer></script>
 </head>
 <body>
-    <h1 id="countdown"></h1>
-    <button id="startButton">Start</button>
+    <header>
+        <h1 id="countdown"></h1>
+        <button id="startButton">Start</button>
+    </header>
+    <main>
+        <p>
+            The assignment instructions can be found here:
+        </p>
+        <p>
+            <a href="https://byui-cse.github.io/wdd330-ww-course/week02/prepare-settimeout-setinterval.html">Week 02 Assignment: setTimeout and setInterval</a>
+        </p>
+    </main>
+    <footer>
+        &copy K. Rivera
+    </footer>
     
 </body>
 </html>
